<resources>
    <string name="app_name">CarWash</string>

    <string name="enter_your_number">Введите свой номер телефона</string>
    <string name="enter_code">Введите код из SMS-сообщения</string>
    <string name="next">Продолжить</string>
    <string name="about_code_number">Код активации будет отправлен в SMS-сообщении. Убедитесь, что ваше устройство может их принимать.</string>

    <string name="welcome_phrase">Добро пожаловать!</string>
    <string name="log_in">Войти</string>
    <string name="enter">Вход</string>
    <string name="register">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>

    <string name="enter_data">Введите данные</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="forget_pass"><u>Забыли пароль?</u></string>

    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="city">Город</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>

    <string name="nav_auto">Авто</string>
    <string name="nav_orders">Заказы</string>
    <string name="nav_map">Карта</string>
    <string name="nav_profile">Профиль</string>

    <string name="enter_auto_data">Введите данные автомобиля</string>
    <string name="brand">Марка</string>
    <string name="model">Модель</string>
    <string name="auto_number">Гос номер</string>
    <string name="auto_region">Регион</string>
    <string name="auto_category">Категория</string>

    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="statisctics_button">Статистика</string>
    <string name="bonuses_button_profile">Бонусы</string>
    <string name="cashback_button_profile">Кэшбеки</string>
    <string name="referal_program_profile">Реферальная система</string>
    <string name="change_pass_button">Сменить пароль</string>
    <string name="cancel">Отменить</string>
    <string name="edit_data">Редактировать данные</string>
    <string name="phone_number">Номер</string>
    <string name="create_order_btn">Создать заказ</string>
    <string name="order_status">Статус:</string>
    <string name="accepted_status">Принят</string>
    <string name="completed_status">Выполнен</string>
    <string name="canceled_status">Завершен</string>
    <string name="creating_order_toolbar_title">Создание заказа</string>
    <string name="next2">Далее</string>
    <string name="car_wash">Автомойка</string>
    <string name="title_of_step1_order">Выберите\nавтомойку и авто</string>
    <string name="title_of_step2_order">Выберите\nдату и время</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="title_of_step3_order">Выберите\nуслуги</string>
    <string name="services">Услуги</string>
    <string name="order">Заказ</string>
    <string name="cost">Стоимость</string>
    <string name="to_order">заказать</string>
    <string name="my_orders">Мои заказы</string>
    <string name="status">Статус</string>
    <string name="complited_status_info">Можете забрать машину</string>
    <string name="leave_review_button">Оставить отзыв</string>
    <string name="review_toolbar">Отзыв</string>
    <string name="rate_the_order">Оцените заказ</string>
    <string name="what_did_you_like">Что вам особенно понравилось?</string>
    <string name="speed_of_order">Скорость</string>
    <string name="cost_of_order">Стоимость</string>
    <string name="service_of_order">Сервис</string>
    <string name="cleanliness_of_order">Чистота</string>
    <string name="your_review">Ваш комментарий...</string>
    <string name="done">Готово</string>
    <string name="reviews_button">Отзывы</string>
    <string name="working_hours">Время работы</string>
    <string name="first_name_is_empty">Имя не может быть пустым</string>
    <string name="first_name_min_length">Имя должно содержать минимум 2 символа</string>
    <string name="last_name_is_empty">Фамилия не должна быть пустой</string>
    <string name="last_name_min_legth">Фамилия должна содержать по крайней мере 2 символа</string>
    <string name="name_is_empty">Имя и фамилия не должны быть пустыми</string>
    <string name="empty_field">Это поле не может быть пустым</string>
    <string name="name_min_length">Имя и фамилия должны сожержать по крайней мере 2 символа</string>
    <string name="city_is_empty">Город не может быть пустым</string>
    <string name="phone_is_empty">Номер телефона не может быть пустым</string>
    <string name="phone_only_number">Телефон должен содержать только цифры</string>
    <string name="invalid_phone_number">Некорректный номер телефона</string>
    <string name="pass_is_empty">Пароль не может быть пустым</string>
    <string name="pass_min_length">Пароль должен содержать не менее 8 символов</string>
    <string name="invalid_email">Некорректный email</string>

    <string-array name="categories_array">
        <item>Легковая</item>
        <item>Грузовая</item>
    </string-array>
    <string name="accepted_status_info">Подъезжайте к назначенному времени</string>
    <string name="canceled_status_info">Заказ отменен</string>
</resources>