<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.carwash.ui.main.orders.LeaveReviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:theme="@style/Toolbar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Toolbar2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/review_toolbar"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_rate_title"
            android:text="@string/rate_the_order"
            android:textSize="@dimen/rate_order_title"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:progressTint="#FECF00"
            android:rating="4"
            android:secondaryProgressTint="#FECF00"
            android:progressBackgroundTint="#59FECF00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/what_did_you_like_margin_top"
            android:text="@string/what_did_you_like"
            android:textColor="@color/black"
            android:textSize="@dimen/what_did_you_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="0dp">


            <ImageView
                android:id="@+id/imgSpeed"
                android:layout_width="@dimen/liked_thing_size"
                android:layout_height="@dimen/liked_thing_size"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/liked_speed_back"
                app:layout_constraintEnd_toStartOf="@+id/imgCost"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCost"
                android:layout_width="@dimen/liked_thing_size"
                android:layout_height="@dimen/liked_thing_size"
                android:src="@drawable/liked_cost_back"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/imgService"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgSpeed"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgService"
                android:layout_width="@dimen/liked_thing_size"
                android:layout_height="@dimen/liked_thing_size"
                android:src="@drawable/liked_service_back"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/imgCleanliness"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgCost"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCleanliness"
                android:layout_width="@dimen/liked_thing_size"
                android:layout_height="@dimen/liked_thing_size"
                android:src="@drawable/liked_clean_back"
                android:clickable="true"
                android:focusable="true"
                android:longClickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imgService"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/speed_of_order"
                android:textColor="@color/hint"
                android:textSize="@dimen/liked_thing_title"
                app:layout_constraintEnd_toEndOf="@+id/imgSpeed"
                app:layout_constraintStart_toStartOf="@+id/imgSpeed"
                app:layout_constraintTop_toBottomOf="@+id/imgSpeed" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cost_of_order"
                android:textSize="@dimen/liked_thing_title"
                android:textColor="@color/hint"
                app:layout_constraintEnd_toEndOf="@+id/imgCost"
                app:layout_constraintStart_toStartOf="@+id/imgCost"
                app:layout_constraintTop_toBottomOf="@+id/imgCost" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/service_of_order"
                android:textSize="@dimen/liked_thing_title"
                android:textColor="@color/hint"
                app:layout_constraintEnd_toEndOf="@+id/imgService"
                app:layout_constraintStart_toStartOf="@+id/imgService"
                app:layout_constraintTop_toBottomOf="@+id/imgService" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cleanliness_of_order"
                android:textSize="@dimen/liked_thing_title"
                android:textColor="@color/hint"
                app:layout_constraintEnd_toEndOf="@+id/imgCleanliness"
                app:layout_constraintStart_toStartOf="@+id/imgCleanliness"
                app:layout_constraintTop_toBottomOf="@+id/imgCleanliness" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/etComment"
            android:layout_width="0dp"
            android:layout_height="@dimen/users_review_edittext_height"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/margin_top_users_review_edittext"
            android:layout_marginEnd="24dp"
            android:background="@drawable/back_leave_review_edit_text"
            android:ems="10"
            android:hint="@string/your_review"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textColor="#7D7D7D"
            android:textColorHint="#7D7D7D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/btnLeaveReview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/margin_bottom_btn_done"
            android:background="@drawable/default_back_btn"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLeaveReview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>