<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="ru.carwash.ui.auth.EnterNumberActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/logo_size_without_text_width"
        android:layout_height="@dimen/logo_size_without_text_height"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_without_text" />

    <TextView
        android:id="@+id/tvEnterData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/enter_your_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/register_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <LinearLayout
        android:id="@+id/llEnterData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/line_decoration"
        android:orientation="vertical"
        android:paddingTop="@dimen/border_width"
        android:paddingBottom="@dimen/border_width"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterData">

        <EditText
            android:id="@+id/etRegion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="@dimen/border_width"
            android:background="@color/white"
            android:ems="10"
            android:text="Россия"
            android:textAlignment="textStart"
            android:paddingStart="18dp"
            android:textColor="@color/black"
            android:textSize="@dimen/register_text_size"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@color/white"
            android:ems="10"
            android:selectAllOnFocus="true"
            android:paddingStart="18dp"
            android:textColor="@color/black"
            android:textSize="@dimen/register_text_size"
            android:inputType="phone" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/default_back_btn"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEnterData" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/about_code_number"
        android:textAlignment="center"
        android:textColor="@color/info"
        android:textSize="@dimen/info_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

</androidx.constraintlayout.widget.ConstraintLayout>